# test_kedro

./: Pipfile
example-kedro-1/: README.md  pyproject.toml
example-kedro-1/conf/base/: catalog.yml
example-kedro-1/docs/source/: conf.py  index.rst
example-kedro-1/src/example_kedro_1/: __init__.py  __main__.py  settings.py
example-kedro-1/tests/: test_run.py
kedro-new/: README.md  pyproject.toml
kedro-new/src/kedro_new/: __init__.py  __main__.py
test-kedro-pivot-table/: ICAS Piragua.xlsx  README.md  pyproject.toml
test-kedro-pivot-table/docs/source/: conf.py  index.rst
test-kedro-pivot-table/src/test_kedro_pivot_table/: __init__.py  __main__.py  settings.py
test-kedro-pivot-table/tests/: test_run.py
