[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_new"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-new = "kedro_new.__main__:main"

[tool.kedro]
package_name = "kedro_new"
project_name = "kedro_new"
kedro_init_version = "0.19.1"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_new.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
